--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Email Finder",
+  "name": "Email Finder by Leadnyze",
   "description": "Easily find any email address for free!",
   "keywords": ["node", "express", "email"]
 }
